fixed horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -26,18 +26,20 @@ html *:after {
   box-sizing: inherit;
 }
 
-body {
-  @apply bg-slate-50;
+html, body {
+  overflow-x: hidden;
 }
 
 body {
   margin: 0;
   padding: 0;
+  position: relative;
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  @apply bg-slate-50;
 }
 
 code {
